# mysarum

./: README  README.md
boids/: boids.pde
boids_2d/: boid_2d.pde  flock_2d.pde
examples/: School.vue  cavern.glsl  simplereactiondiffusion.glsl  spherereactiondiffusion.glsl
mysar/: boid.pde  mysar.pde
openframeworks/: .gitignore
openframeworks/audioreact/: .gitignore  addons.make
openframeworks/biomass/: GPATH  GRTAGS  GTAGS  Makefile  addons.make  biomass.code-workspace  config.make
openframeworks/heartbeat/: addons.make
openframeworks/hypercycles/: addons.make
openframeworks/kuramoto/: README.md  addons.make
openframeworks/opticalflow/: GPATH  GRTAGS  GTAGS  Makefile  config.make  opticalflow.code-workspace
openframeworks/reactdiff/: GRTAGS  Makefile
openframeworks/shadows/: addons.make
openframeworks/slime/: GTAGS
openframeworks/slime2d/: addons.make
openframeworks/slime3d/: GPATH  README.md  addons.make  config.make  slime.code-workspace
openframeworks/spacecolonization/: README.md  addons.make  config.make  spacecolonization.code-workspace
openframeworks/synthesizer/: config.make
openframeworks/thegrove/: addons.make  config.make
processing/boids_2d/: boid_2d.pde  boids_2d.pde  flock_2d.pde  sketch.properties
processing/boids_3d/: boid.pde  boids.pde  sketch.properties
processing/slime/: agent.pde  food.pde  moulds.pde  slime.pde
processing/vector_vs_angles/: vector_vs_angles.pde
python/: .gitignore
python/cellularautomata/: dataset.py  hypercycles.py  lenia.py  main.py  nca.py  trainer.py
python/gra/: CLAUDE.local.md  CLAUDE.md  run.py  search.py  search_discrete.py  sim.py  sim_discrete.py  test_topology.py  viz.py  viz_growth.py
python/growth/: .gitignore  CLAUDE.md  growth_halfedge.py  growth_halfedge_jax.py  growth_halfedge_jax_2d.py  growth_halfedge_surface.py  nca_shape_descriptors.py  nca_sweep.py  render_floraform.py  test_comparison.py  test_nvdiffrast_lighting.py  test_performance.py
python/neuralcellularautomata/: dataset.py  main.py  nca.py  trainer.py
python/particlelife/: README.md  autoencoder.py  autoencoders.py  build_lenia_dataset.py  clip_lenia_3d_generate.py  clip_lenia_generate.py  clipx_lenia_dataset.py  clipx_lenia_generate.py  cluster.py  create_datamap.py  data_map.html  embedding.py  evo_particle_life.py  multi_plt_animation.py  multi_plt_animation_with_energy.py  particle_lenia.py  particle_lenia_task.py  particle_lenia_train.py  particle_life.py  particle_life_func.py  particle_life_original.py  plt_animation.py  rewards.py  simple_plt_animation.py  tests.py  train_autoencoder.py  train_autoencoder_debug.py  viz_clusters.py  viz_examples.py  webgpu_compute_particles.html
python/physarum/: fm_synthesizer.py  lenia_animate.py  main.py  physarum_task.py  physarum_train.py  physarums.py  rewards.py  synthesizer.py  test_reward.py  train_flocking.py  train_rewarders.py
python/softbodies/: softbodies.py
raylib/: .gitignore
raylib/hypercycles/: CMakeLists.txt  automata.cu  automata.cuh  hypercycles.cpp  hypercycles.h  main.cpp  structs.h
rust/birdsong/: Cargo.toml
rust/birdsong/src/: main.rs
rust/gra/: CLAUDE.md  Cargo.toml  graphs.json
rust/gra-sea/: Cargo.toml
rust/gra/src/: gpu.rs  (+3 more)
rust/grove/: Cargo.toml
rust/growth/: CLAUDE.md  Cargo.toml
rust/growth/src/: bench.rs  gpu.rs  main.rs  mesh.rs  mesh_builders.rs  render.rs
rust/growth/src/shaders/: bbox.wgsl  chebyshev_init.wgsl  chebyshev_step.wgsl  common.wgsl  fill_bins.wgsl  growth.wgsl  integrate.wgsl  mesh_render.wgsl  predict.wgsl  project_bending.wgsl  project_collision.wgsl  project_springs.wgsl  repulsion.wgsl  sort_vertices.wgsl  topo_forces.wgsl
rust/pond/: CLAUDE.md  Cargo.toml
rust/pond/src/: barnes_hut.rs  gpu.rs  main.rs  render.rs  reverb.rs
rust/pond/src/shaders/: audio.wgsl  bbox.wgsl  bin_prefix_sum.wgsl  common.wgsl  gra_bin.wgsl  gra_integrate.wgsl  gra_phase_update.wgsl  gra_sort.wgsl  gra_spring.wgsl  modal_audio.wgsl  modal_cheb_init.wgsl  modal_cheb_step.wgsl  modal_phase_update.wgsl  particle.wgsl  particle_bin.wgsl  particle_sort.wgsl  phase_update.wgsl  render_background.wgsl  render_gra.wgsl  render_particle.wgsl
rust/simplelife/: CLAUDE.md  Cargo.toml
rust/simplelife/assets/shaders/: audio.wgsl  common.wgsl  particle.wgsl  render.wgsl
rust/simplelife/src/: main.rs
rust/simplelife/src/shaders/: audio.wgsl  bin_fill_size.wgsl  common.wgsl  particle.wgsl  phase_update.wgsl  render.wgsl
scripts/: README.md  cut_videos.py  feedkill_range.py  main.js  shadows.py  yt_dl_random.py
slime/: agent.pde  mold.pde  mould.pde  moulds.pde  slime.pde
(+168 files in other folders)
