[package]
name = "birdsong"
version = "0.1.0"
edition = "2024"

[dependencies]
nannou = { path = "/home/ben/Projects/personal/repos/nannou/nannou", features = ["egui"] }
nannou_audio = { path = "/home/ben/Projects/personal/repos/nannou/nannou_audio" }
ringbuf = "0.4"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
