[package]
name = "growth"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.17"
nannou = { path = "/home/ben/Projects/personal/repos/nannou/nannou", features = ["egui"] }
nannou_audio = { path = "/home/ben/Projects/personal/repos/nannou/nannou_audio" }
bevy_nannou = { path = "/home/ben/Projects/personal/repos/nannou/bevy_nannou" }
