[package]
name = "simplelife"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.17", features = ["wayland"] }
wgpu = { version = "26", default-features = false }
ringbuf = "0.4"
bytemuck = { version = "1.14", features = ["derive"] }
futures = "0.3"
crossbeam-channel = "0.5"
cpal = "0.15"
pollster = "0.4"
rand = "0.8"
