[package]
name = "simplelife"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.18.0-rc.1"
nannou = { git = "https://github.com/nannou-org/nannou", branch = "bevy-refactor" }
nannou_audio = { git = "https://github.com/nannou-org/nannou", branch = "bevy-refactor" }
ringbuf = "0.4"
bytemuck = { version = "1.14", features = ["derive"] }
futures = "0.3"
crossbeam-channel = "0.5"